--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                         <li><a href="#our-team-container">Team</a></li>
                         <li><a href="#contact-us-container">Contact</a></li>
                     </ul>
+
+                    <!-- a href links to div containers allowing to jump to their sections on the page -->
                 
                     <form action="index.html" method="post">
                         <input id="search" type="search" placeholder="Search">
@@ -139,10 +141,14 @@
                     <input id="text" type="text">
                 </form>
                 <button>Send</button>
+
+                <!-- added respective input types so that it autofills correctly (for example it will recommend my email address in the email form) -->
             </div>
             <div class="location-container">
                 <h2>Location</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.2660232705093!2d-75.7574119196877!3d45.3487360203401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669674933610!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <!-- linked from google maps -->
             </div>
             <div class="hours-container">
                 <h2>Hours of operation</h2>
