Fixed some buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="css/reset.css">
+
+    <!-- put google fonts here -->
+
     <link rel="stylesheet" href="css/main.css">
     <title>Final</title>
 </head>
@@ -12,8 +18,8 @@
         <div class="banner">
             <div class="nav">
                 <nav>
-                    <img src="images/logo.png" alt="Logo">
                     <ul>
+                        <li><img src="images/logo.png" alt="Logo"></li>
                         <li><a href="">Home</a></li>
                         <li><a href="#about-us-container">About Us</a></li>
                         <li><a href="#our-services-container">Services</a></li>
@@ -35,7 +41,7 @@
             <div class="welcome">
                 <h1>Welcome to Three Star Media</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quisquam pariatur vero aperiam voluptatem aspernatur? Laborum fuga illo ducimus, ullam a, quibusdam sint pariatur ipsam aut, tempora exercitationem repellendus sapiente!</p>
-                <button id="connect-button">Connect with us &#9658;</button>
+                <button id="connect-button"><a href="#contact-us-container">Connect with us &#9658;</a></button>
             </div>
         </div>
     </header>
@@ -62,32 +68,32 @@
                 <img src="images/digital.jpg" alt="Digital Transformation">
                 <h3>Digital Transformation</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nobis quidem veritatis quia. Aliquid labore quidem fuga obcaecati repellendus ducimus, magnam rerum quasi delectus tenetur nulla eos tempora enim voluptatibus.</p>
-                <button id="digital-plans-button"><h4>Digital Plans &#9658;</h4></button>
+                <button id="digital-plans-button">Digital Plans &#9658;</button>
             </div>
             <div class="marketing-container">
                 <img src="images/marketing.jpg" alt="Marketing">
                 <h3>Marketing</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nobis quidem veritatis quia. Aliquid labore quidem fuga obcaecati repellendus ducimus, magnam rerum quasi delectus tenetur nulla eos tempora enim voluptatibus.</p>
-                <button id="marketing-button"><h4>Marketing Plans &#9658;</h4></button>
+                <button id="marketing-button">Marketing Plans &#9658;</button>
             </div>
             <div class="video-production-container">
                 <img src="images/video.jpg" alt="Video Production">
                 <h3>Video Production</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nobis quidem veritatis quia. Aliquid labore quidem fuga obcaecati repellendus ducimus, magnam rerum quasi delectus tenetur nulla eos tempora enim voluptatibus.</p>
-                <button id="video-production-button"><h4>Video Plans &#9658;</h4></button>
+                <button id="video-production-button">Video Plans &#9658;</button>
             </div>
             <div class="web-development-container">
                 <img src="images/web.jpg" alt="Web Development">
                 <h3>Web Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nobis quidem veritatis quia. Aliquid labore quidem fuga obcaecati repellendus ducimus, magnam rerum quasi delectus tenetur nulla eos tempora enim voluptatibus.</p>
-                <button id="web-development-button"><h4>Web Plans &#9658;</h4></button>
+                <button id="web-development-button">Web Plans &#9658;</button>
             </div>
             <div id="print-container">
                 <img src="images/print.jpg" alt="Print">
                 <div id="print-content">
                 <h3>Print</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sint fuga a mollitia minus, enim iusto nemo dolor. Incidunt, repellendus eius. Enim, consequuntur. Incidunt accusamus odit, deleniti repellat voluptatibus cum!</p>
-                <button id="print-button"><h4>Print Plans &#9658;</h4></button>
+                <button id="print-button">Print Plans &#9658;</button>
                 </div>
             </div>
         </div>
