Corrected small problems

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                         <li><a href="#our-services-container">Services</a></li>
                         <li><a href="#our-team-container">Team</a></li>
                         <li><a href="#contact-us-container">Contact</a></li>
+                        <li><form action="index.html" method="post">
+                            <input id="search" type="search" placeholder="Search">
+                        </form></li>
+                        <li><button id="search-button">&#x1F50E;&#xFE0E;</button></li>
                     </ul>
 
                     <!-- a href links to div containers allowing to jump to their sections on the page -->
-                
-                    <form action="index.html" method="post">
-                        <input id="search" type="search" placeholder="Search">
-                    </form>
-                    <button id="search-button"><p>&#x1F50E;&#xFE0E;</p></button>
                 </nav>
             </div>
         </div>
