--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             </div>
         </div>
 
+        <!-- each section gets its own div to allow for grid in css -->
+
         <div class="our-services wrapper" id="our-services-container">
             <div class="our-services-header">
                 <h2>Our Services</h2>
